# Nativo-NFT-minter

./: .gitignore  Cargo.toml  blobs.json  errd.md  mint.md  readme.md
neardev/: dev-account  dev-account.env
src/: deadmethods.txt  lib.rs  methods_for_minter.txt  metodospendientes.txt
